# Rethink

LawfulLeadingBlock/: keywords.py  main.py  pyproject.toml  requirements.txt  summarization.py  transcript.py
LawfulLeadingBlock/templates/: index.html  keyword.html  summary.html  transcript.html
pytohn/: googleTranslate.py  speechToText.py  textSummarization.py  textSummarizer2.py
