[tool.poetry]
name = "lawfulleadingblock"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gensim = "^4.0.0"
SpeechRecognition = "^3.8.1"
bs4 = "^0.0.1"
nltk = "^3.5"
beautifulsoup4 = "^4.9.3"
chardet = "^4.0.0"
idna = "^3.1"
urllib3 = "^1.26.4"
soupsieve = "^2.2.1"
certifi = "^2020.12.5"
text-summarizer = "^0.0.6"
summarization = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
